--- a/The-Maple-Company.html
+++ b/The-Maple-Company.html
@@ -14,16 +14,26 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap');
+      </style>
+   <style>
         @import url('https://fonts.googleapis.com/css2?family=Gilda+Display&family=Roboto&display=swap');
         </style>
+        <style>
+          @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,800&display=swap');
+          </style>
     <style>
-       
+
+      /*body{
+        font-family: 'Ubuntu', sans-serif;
+      }*/
        .jumbotron{
           background-image: url(banner.jpg);
           background-size: cover;
           background-repeat: no-repeat; 
           background-position: center center;
           position: relative;
+          font-family: inherit;
 			height: 100%;
 			text-align: center;
 			  padding-top: 10rem;
@@ -49,16 +59,19 @@
 }
 #logo{
   color: white;
-  font-family: 'link href="//db.onlinewebfonts.com/c/d10afd0ad85bd0aad7fc329cce5269c5?family=Cassannet+Bold" rel="stylesheet" type="text/css"';
+  font-family: 'Bodoni Moda', serif;
   font-weight: bolder;
-  font-size: large;
+  font-size: 30px;
+}
+.nav-item{
+  font-size: 20px;
 }
 
 #SecondRow {
   text-align: center;
   margin-top: 50px;
   margin-bottom: 50px;
-/*  font-family: Arial, Helvetica, sans-serif;*/
+  font-family: 'Ubuntu', sans-serif;
   font-weight: bolder;
   font-size: 100%;
 }
@@ -75,10 +88,12 @@
   font-size: 150%;
   font-weight: bolder;
   padding-bottom: 80px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 #ProjectRow {
   text-align: center;
+  font-family: 'Ubuntu', sans-serif;
   margin-top: 50px;
   margin-bottom: 50px;
   
@@ -86,10 +101,11 @@
 
 * {
   box-sizing: border-box;
+ /* font-family: 'Ubuntu', sans-serif;*/
 }
 
 #BodyParts {
- /* font-family: "Muli", sans-serif;*/
+  font-family: 'Ubuntu', sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -154,11 +170,13 @@
   color: white;
   font-size: 100%;
   font-weight: bolder;
+  font-family: 'Ubuntu', sans-serif;
   padding-bottom: 80px;
 }
 
 #ServiceRow {
   text-align: center;
+  font-family: 'Ubuntu', sans-serif;
   margin-top: 50px;
   margin-bottom: 50px;
 }
@@ -186,6 +204,7 @@
   margin-top: 150px;
   text-align: center;
   color: white;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 100%;
   font-weight: bolder;
   padding-bottom: 80px;
@@ -198,7 +217,7 @@
     <!-- Navbar  -->
     <nav id ="header" class="navbar fixed-top navbar-expand-lg navbar-dark text-white p-md-3">
       <div class="container">
-       <div id ="logo">MAPLE</div>
+       <div id ="logo">Maple</div>
         <button
           class="navbar-toggler"
           type="button"
