--- a/The-Maple-Company.html
+++ b/The-Maple-Company.html
@@ -326,16 +326,16 @@
               <a class="nav-link text-white" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">About Us</a>
+              <a class="nav-link text-white" href="#about">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Projects</a>
+              <a class="nav-link text-white" href="#project">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Services</a>
+              <a class="nav-link text-white" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Contact</a>
+              <a class="nav-link text-white" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -664,16 +664,16 @@
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="#!" class="text-white" style="text-decoration: none;">Home</a>
+              <a href="#" class="text-white" style="text-decoration: none;">Home</a>
             </li>
             <li>
-              <a href="#!" class="text-white" style="text-decoration: none;">About Us</a>
+              <a href="#about" class="text-white" style="text-decoration: none;">About Us</a>
             </li>
             <li>
-              <a href="#!" class="text-white" style="text-decoration: none;">Project</a>
+              <a href="#project" class="text-white" style="text-decoration: none;">Project</a>
             </li>
             <li>
-              <a href="#!" class="text-white" style="text-decoration: none;">Services</a>
+              <a href="#services" class="text-white" style="text-decoration: none;">Services</a>
             </li>
           </ul>
         </div>
