--- a/The-Maple-Company.html
+++ b/The-Maple-Company.html
@@ -371,21 +371,22 @@
               </div>
             </div>
           </div>
-          <div class="col">
+           <div class="col">
             <div class="card h-100">
-              <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8aG9tZSUyMGFwcGxpYW5jZXxlbnwwfDB8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="...">
+              <img src="https://images.unsplash.com/photo-1484154218962-a197022b5858?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aG9tZSUyMGFwcGxpYW5jZXxlbnwwfDB8MHx8&auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="...">
+
               <div class="card-body">
-                <h5 class="card-title"><i class="fas fa-umbrella-beach"></i> Serene Scenery</h5>
-                <p class="card-text">You will be lost in your beautiful surroundings.</p>
+                <h5 class="card-title"><i class="fas fa-hotel"></i> Best Home Appliances Brands</h5>
+                <p class="card-text">Get the best quality of Home Appliances at a low cost from popular brands like Samsung, Phillips, Whirlpool and Usha.</p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="https://images.unsplash.com/photo-1484154218962-a197022b5858?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aG9tZSUyMGFwcGxpYW5jZXxlbnwwfDB8MHx8&auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title"><i class="fas fa-utensils"></i> Luscious Food</h5>
-                <p class="card-text">Experience the best of the delicacies.</p>
+            <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8aG9tZSUyMGFwcGxpYW5jZXxlbnwwfDB8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title"><i class="fas fa-hotel"></i> Intuitive Design</h5>
+                <p class="card-text">Experience the best with customised designs.</p>
               </div>
             </div>
           </div>
