Made About Us Responsive

--- a/The-Maple-Company.html
+++ b/The-Maple-Company.html
@@ -164,6 +164,23 @@
     color: #111;
     background: none;
 }
+	    
+@media (max-width: 991.98px) {
+  #aboutUs .about-content .left{
+    width: 100%;
+}
+
+#aboutUs .about-content .left img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+#aboutUs .about-content .right{
+    width: 100%;
+}
+}
 
 #project {
     background-image: url("https://images.unsplash.com/photo-1592765213186-912a7504662d?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGJlaWdlfGVufDB8MHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60");
@@ -411,17 +428,18 @@
         <div id="aboutUs">
           <div class="container">
             <div class="about-content row">
-              <div class="col-lg-6 left">
-                <img src="https://images.unsplash.com/photo-1561024172-0ae2ebd65018?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="about">
+              <div class="column left col-lg-6">
+                  <img src="https://images.unsplash.com/photo-1561024172-0ae2ebd65018?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="about">
               </div>
-              <div class="col-lg-6 right">
-                <div class="text">About Maple Company</div>
+              <div class="column right col-lg-6">
+                  <div class="text">About Maple Company</div>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit commodi rem labore ullam ut eveniet assumenda necessitatibus nesciunt vitae itaque esse, sunt quidem exercitationem voluptatem, quia, molestiae delectus ipsum veritatis beatae? Quam ab facilis accusamus, nam ad rerum provident eius iure deleniti delectus, quod aspernatur quis vel perferendis saepe! Fuga! esse accusantium, assumenda maiores libero eius nostrum impedit corrupti.
+                  The Maple Company is a unique home appliances and furniture company. We enable the urban Indian to live better today in their homes, by giving them award-winning furniture and appliances. All of our furniture is designed in-house by experts. Our furniture is inspired by the Indian urban user and how they live in their homes. Our designs are user-led and inspired by their evolving needs and growing lifestyle. We don’t just give furniture. We provide decor, accessories and appliances as well.
+                  
                 </p>
                 <br>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla accusamus iure, vel sed laboriosam culpa excepturi impedit modi, neque voluptatum eius repudiandae ex dolore cum, recusandae laudantium exercitationem nobis in tempore sit. Voluptates, saepe facere omnis et eaque iure eius. Quos repellendus eligendi voluptatibus dolore perferendis facilis quam a impedit.
+                  So, with a simple click, one can furnish their entire home, room or corner without traversing multiple stores or websites at a fraction of the time, effort and cost. All decor that we provide is brand new, and never reused for hygiene reasons. It comes with a host of complimentary benefits like exchange if you are bored with your furniture and appliances, relocation across cities, pausing of subscriptions and deep cleaning services as a part of the subscription. We operate our services in Bengaluru, Mumbai, Pune, Delhi-NCR, Hyderabad and Chennai. We are headquartered in Bengaluru, India.
                 </p>
                 <a href="#" style="text-decoration: none;">Explore!</a>
               </div>
