--- a/The-Maple-Company.html
+++ b/The-Maple-Company.html
@@ -180,6 +180,10 @@
 #aboutUs .about-content .right{
     width: 100%;
 }
+	
+#aboutUs .about-content .right .text{
+    text-align: center;
+}
 }
 
 #project {
