--- a/The-Maple-Company.html
+++ b/The-Maple-Company.html
@@ -669,9 +669,7 @@
     <!-- Section: Text -->
     <section class="mb-4">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-        repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-        eum harum corrupti dicta, aliquam sequi voluptate quas.
+        We Deliver in : Ahmedabad, Bangalore, Bhopal, Chandigarh, Chennai, Coimbatore, Faridabad, Ghaziabad, Goa, Gurgaon, Hyderabad, Indore, Jaipur, Jodhpur, Kochi, Kolkata, Lucknow, Ludhiana, Mumbai, Nagpur, Navi Mumbai, New Delhi, Noida, Pimpri Chinchwad, Pune, Secunderabad, Surat, Udaipur, Thane, Vadodara, Mysore & Across India.
       </p>
     </section>
     <!-- Section: Text -->
