--- a/The-Maple-Company.html
+++ b/The-Maple-Company.html
@@ -106,12 +106,14 @@
   font-size: 150%;
   font-weight: bolder;
   padding-bottom: 80px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 #AboutRow {
   text-align: center;
   margin-top: 50px;
   margin-bottom: 50px;
+  font-family: 'Ubuntu', sans-serif;
   
 }
 
@@ -141,6 +143,7 @@
     font-size: 25px;
     font-weight: 600;
     margin-bottom: 10px;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 #aboutUs .about-content .right p{
@@ -438,12 +441,12 @@
               <div class="column right col-lg-6">
                   <div class="text">About Maple Company</div>
                 <p>
-                  The Maple Company is a unique home appliances and furniture company. We enable the urban Indian to live better today in their homes, by giving them award-winning furniture and appliances. All of our furniture is designed in-house by experts. Our furniture is inspired by the Indian urban user and how they live in their homes. Our designs are user-led and inspired by their evolving needs and growing lifestyle. We don’t just give furniture. We provide decor, accessories and appliances as well.
+                  The Maple Company is a unique home appliances and furniture company. We enable the urban Indians to live better today in their homes, by giving them award-winning furniture and appliances. All of our furnitures are well-designed by experts designers. Our furnitures are inspired by the Indian urban users and their lifestyle. Our designs are customised and inspired by the users' evolving needs and requirements. We don’t just provide furniture. We provide decor, accessories and appliances as well.
                   
                 </p>
                 <br>
                 <p>
-                  So, with a simple click, one can furnish their entire home, room or corner without traversing multiple stores or websites at a fraction of the time, effort and cost. All decor that we provide is brand new, and never reused for hygiene reasons. It comes with a host of complimentary benefits like exchange if you are bored with your furniture and appliances, relocation across cities, pausing of subscriptions and deep cleaning services as a part of the subscription. We operate our services in Bengaluru, Mumbai, Pune, Delhi-NCR, Hyderabad and Chennai. We are headquartered in Bengaluru, India.
+                  So, with a simple click, one can furnish their entire home, room or corner without traversing multiple stores or websites at a fraction of the time, effort and cost. All decor that we provide is brand new, and never reused for hygiene reasons. It comes with a host of complimentary benefits like exchange in case you are not satisfied with your product, relocation across cities, pausing of subscriptions and deep cleaning services as a part of the subscription. We operate our services in Bengaluru, Mumbai, Pune, Delhi-NCR, Hyderabad and Chennai. We are headquartered in Bengaluru, India.
                 </p>
                 <a href="#" style="text-decoration: none;">Explore!</a>
               </div>
@@ -670,6 +673,7 @@
     <section class="mb-4">
       <p>
         We Deliver in : Ahmedabad, Bangalore, Bhopal, Chandigarh, Chennai, Coimbatore, Faridabad, Ghaziabad, Goa, Gurgaon, Hyderabad, Indore, Jaipur, Jodhpur, Kochi, Kolkata, Lucknow, Ludhiana, Mumbai, Nagpur, Navi Mumbai, New Delhi, Noida, Pimpri Chinchwad, Pune, Secunderabad, Surat, Udaipur, Thane, Vadodara, Mysore & Across India.
+   
       </p>
     </section>
     <!-- Section: Text -->
