--- a/The-Maple-Company.html
+++ b/The-Maple-Company.html
@@ -441,13 +441,12 @@
               <div class="column right col-lg-6">
                   <div class="text">About Maple Company</div>
                 <p>
-                  The Maple Company is a unique home appliances and furniture company. We enable the urban Indians to live better today in their homes, by giving them award-winning furniture and appliances. All of our furnitures are well-designed by experts designers. Our furnitures are inspired by the Indian urban users and their lifestyle. Our designs are customised and inspired by the users' evolving needs and requirements. We don’t just provide furniture. We provide decor, accessories and appliances as well.
+                  The Maple Company is a unique home appliances and furniture company. We enable the urban Indians to live better today in their homes, by giving them award-winning furnitures and appliances. All of our furnitures are well-designed by expert designers. Our furnitures are inspired by the Indian urban users and their lifestyle. Our designs are customised and inspired by the users' evolving needs and requirements. We don’t just provide furniture. We provide decor, accessories and appliances as well.
                   
                 </p>
                 <br>
                 <p>
-                  So, with a simple click, one can furnish their entire home, room or corner without traversing multiple stores or websites at a fraction of the time, effort and cost. All decor that we provide is brand new, and never reused for hygiene reasons. It comes with a host of complimentary benefits like exchange in case you are not satisfied with your product, relocation across cities, pausing of subscriptions and deep cleaning services as a part of the subscription. We operate our services in Bengaluru, Mumbai, Pune, Delhi-NCR, Hyderabad and Chennai. We are headquartered in Bengaluru, India.
-                </p>
+                  Among a flurry of benefits, we provide personalized exclusive offers, convenient EMI payment options, as well as a Life Time Service Assurance, just in case you face any problem with your appliances. Also, while the Home Appliance Prices in India may vary from brand to brand and technology to feature, we strive hard to provide a wide catalogue of the best Home Appliances for every budget. After all, the core purpose of Maple is to convert each and every dream of our customers into a reality.   </p>
                 <a href="#" style="text-decoration: none;">Explore!</a>
               </div>
             </div>
